# harpe

./: .gitignore  README.md  cabal.project  harpe.cabal
app/: Main.hs
docs/: compiler.md  grammar.md  guide.md  runtime.md  specs.md
harpe-core/: .gitignore  LICENSE  harpe-core.cabal
harpe-core/src/Harpe/: Core.hs
src/Harpe/: AST.hs  Compiler.hs  Parser.hs  Syntax.hs  Templates.hs
src/Harpe/CodeGen/: Names.hs
src/Harpe/Compiler/: Alien.hs  Common.hs  EffectsGen.hs  NodeUtils.hs  PatternValidator.hs  ViewGen.hs
src/Harpe/Parser/: Combinators.hs
templates/: messages.toml  module_boilerplate.hs  wasm_main.hs  wasm_main.js
test/: CompilerSpec.hs  CoreSpec.hs  ParserSpec.hs  Spec.hs  TestHelper.hs
