cabal-version:      3.14
name:               harpe-core
version:            0.1.0.0
synopsis:           Harpe runtime core library
description:        Runtime dependencies for Harpe MVU templates.
license:            Apache-2.0
license-file:       LICENSE
author:             hrkcz001
maintainer:         hrkcz001@example.com
copyright:          2026 hrkcz001
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall
    build-depends:    base ^>=4.22.0.0
                    , ghc-experimental
                    , text

library
    import:           warnings
    exposed-modules:  Harpe.Core
    hs-source-dirs:   src
    default-language: Haskell2010
